FE-74 dashboard Images height bug fixed and games card shift left

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -96,11 +96,11 @@
 }
 
 .height40vh {
-  height: 46vh;
+  height: 55vh;
 }
 
 .height30vh {
-  height: 40vh;
+  height: 50vh;
 }
 
 .carousel-images {
